--- a/haggadah.tex
+++ b/haggadah.tex
@@ -9,6 +9,7 @@
 \usepackage[yyyymmdd,hhmmss]{datetime}
 \usepackage{graphicx}
 \usepackage{multicol}
+\usepackage{changepage}
 \usepackage{makecell}
 \usepackage{paracol}
 \usepackage{polyglossia}
@@ -108,7 +109,7 @@
 \hfill\includegraphics[width=10mm]{cup}
 \vspace*{-15ex}  % Tune this to the image height.
 		
-\section{Kaddeish : Cup of Sanctification}
+\section{Kaddeish : Cup of Sanctification: Kadeš}
 \columnratio{0.9}
 \begin{paracol}{2}
 	\red[]{We pour our first of four cups of grape juice or wine, which symbolise the continuity of G-d's promises to His people. This first cup reminds us that G-d 'Will Bring us Out' of difficult times:} 
@@ -118,8 +119,9 @@
 \red[]{We celebrate our chance to experience this festival by saying the Shehechyanu:}
 \Shehechyanu
 \textit{Now we drink!}
+\textit{Nyní  vypijeme větší část obsahu prvního poháru, budeme se přitom levou rukou opírat.}
 
-\section{Urchatz : Handwashing}
+\section{Urchatz : Handwashing : Urchac}
 \textit{We wash our hands without a blessing}
 % 
 \\
@@ -127,50 +129,52 @@
 %preload the image of the first cup
 \hfill\includegraphics[width=10mm]{Karpas}
 \vspace*{-20ex}  % Tune this to the image height.
-\section{Karpas : Green Spring Herbs}
+\section{Karpas : Green Spring Herbs : Karpas}
  \Karpas
 
-\section{Yachatz}
+\section{Yachatz: Jachac}
 \Yachatz
 
-\section{Arba'ah : The Four}
+\section{Arba'ah : The Four : čtyři otázky a čtyři děti}
 \MaNishtana
 \FourChildrenText
 %
-\section{Maggid : The Story}
-\Maggid
+\section{Maggid : The Story : Magid}
+\MaggidIntro
+\Plagues
+\Dayyeinu
 
-\section{Rachtzah : Handwashing (Blessed)}
+\section{Rachtzah : Handwashing (Blessed) : Rachca}
 \Handwashing
 
-\section{Pesach}
+\section{Pesach : Pesachova}
 \red[]{Passover Sacrifice? the lamb bone which isn't a lamb bone}
 
-\section{Matzah : Unleavened Bread}
+\section{Matzah : Unleavened Bread : Moci/Maca}
 \HaMotzi
 \Matzah
 
-\section{Maror : Bitter Herbs}
+\section{Maror : Bitter Herbs : Maror}
 \red[]{horseradish}
 \Maror
 
-\section{Koreich : Hillel Sandwich}
+\section{Koreich : Hillel Sandwich Koresch}
 \Koreich
 
-\section{Shulchan Oreich : The Set Table}
+\section{Shulchan Oreich : The Set Table : Šulchan Orech}
 \red[]{~time to read the whole shulchan aruch~ \par Let's Eat!}
 
-\section{Tzafun : Afikomen!}
+\section{Tzafun : Afikomen! : Cafun}
 \red[]{The oldest participant must now embark upon the {\LARGE Afikomen hunt}}
 \\
 \textit{music should be played here}
 
-\section{Bareich : Grace after the meal}
+\section{Bareich : Grace after the meal : Barech}
 \textit{Fill your third glass}\\
 \Bareich
 \Kaddeish
 
-\section{Hallel : Praise}
+\section{Hallel : Praise : Halel}
 Psalms, door for Elijah, cup of Elijah and Miriam’s cup
 
 \Hallel
@@ -178,7 +182,7 @@ Psalms, door for Elijah, cup of Elijah and Miriam’s cup
 \Miriam
 % 
 
-\section{Nirtzah : Conclusion}
+\section{Nirtzah : Conclusion : Nirca}
 \red[]{Conclusion (next year in Jerusalem)}
 \Nirtzah
 % 
