--- a/readings.tex
+++ b/readings.tex
@@ -27,9 +27,18 @@
 
 \newcommand{\HaLachmaEng}{%
 	This is the bread of affliction our ancestors ate in the land of Egypt. Let all who are hungry come and eat; let all who are in need come and share our Passover. This year here, next year in the land of Israel; this year oppressed, next year free.}
+%
+\newcommand{\MaNishtanaHeb}{%
+	Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!
+	\begin{enumerate}
+		\item \largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין חָמֵץ וּמַצָּה, הַלַּיְלָה הַזֶּה – כֻּלּוֹ מַצָּה?}
+		\item \largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין שְׁאָר יְרָקוֹת – הַלַּיְלָה הַזֶּה (כֻּלּוֹ) מָרוֹר?}
+		\item \largehebrew{שֶׁבְּכָל הַלֵּילוֹת אֵין אָנוּ מַטְבִּילִין אֲפִילוּ פַּעַם אֶחָת – הַלַּיְלָה הַזֶּה שְׁתֵּי פְעָמִים?}
+		\item \largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין בֵּין יוֹשְׁבִין וּבֵין מְסֻבִּין – הַלַּיְלָה הַזֶּה כֻּלָּנוּ מְסֻבִּין?}
+	\end{enumerate}
+}
 
 \newcommand{\MaNishtanaTlit}{%
-	
 	Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!
 	\begin{enumerate}
 		\item She-b’chol ha-leilot anu ochlin chameitz u-matzah, ha-lailah ha-zeh kulo matzah?
@@ -38,7 +47,6 @@
 		\item She-b’chol ha-leilot anu ochlin bein yoshvin u-vein m’subin, ha-lailah ha-zeh kullanu m’subin?
 		\end{enumerate}
 }
-
 \newcommand{\MaNishtanaEng}{%
 	How different this night is from all other nights!
 	\begin{enumerate}
@@ -48,6 +56,18 @@
 		\item On all other nights we eat either sitting or leaning…why do we all lean tonight?
 		\end{enumerate}
 }
+\newcommand{\MaNishtanaCz}{%
+	Co odlišuje tuto noc ode všech ostatních nocí?
+	\begin{enumerate}
+		\item  proč každé jiné noci jíme jak kvašený, tak nekvašený chléb, a tuto noc jenom nekvašený?
+		\item Proč každé jiné noci jíme všechnu zeleninu, ale dnešní noci pouze hořkou?
+		\item Proč každé jiné noci ani jednou nenamáčíme do slané vody, a této noci dvakrát?
+		\item Proč každé jiné noci jíme vsedě ale teto noci jíme vleže?
+	\end{enumerate}
+}
+\newcommand{\MaNishtanaAnswerCz}{A byli jsme  Egyptě faraonovými otroky, ale Hospodin, náš Bůh, nás odtamtud vyvedl pevnou rukou a vztaženou paží, velkou hrůzou, znameními a zázraky. A kdyby Svatý, buď požehnán, nevyvedl naše předky z Egypta, byli bychom dodnes my a naše děti a děti našich dětí faraonem zotročeni v Egyptě.}
+\newcommand{\MaNishtanaAnswerEng}{We do these things to remember that we were slaves in Egypt, but the Lord our G-d brought us out from that place with a strong hand and an outstretched arm, with great terrors, signs and wonders. And if the Holy One, blessed be He, had not brought our ancestors out of Egypt, we and our children and our children's children would still be enslaved in Egypt by Pharoah.}
+
 \newcommand{\FourChildrenText}{
 	The Talmud describes four types of children at the Pesach table, and how to respond to them
 	\begin{enumerate}
@@ -70,25 +90,97 @@
 {V’hi she-amda l’avoteinu v’lanu.\\
 	This promise has sustained our ancestors and us.}
 	
-\newcommand{\PlaguesText}{%
-image of plagues
-We name the plagues and spill a drop of drink on each one, like a tear for the suffering they caused in the world.
-\begin{center}
-	%\begin{itemize}
-		\color{sectioncolour}
-		\item 	\largehebrew{דָּם}  |  Dam  |  Blood
-		\item 	\largehebrew{צְפַרְדֵּעַ}  |  Tz'fardeiya  |  Frogs
-		\item 	\largehebrew{כִּנִּים}  |  Kinim  |  Lice
-		\item	\largehebrew{עַרוֹב}  |  A'rov  |  Beasts
-		\item	\largehebrew{דֶּבֶר}  |  Dever  |  Cattle disease  
-		\item	\largehebrew{שְׁחִין}  |  Sh'chin  |  Boils
-		\item 	\largehebrew{בָּרָד}  |  Barad  |  Hail
-		\item 	\largehebrew{אַרְבֶּה}  |  Ar'beh  |  Locusts
-		\item 	\largehebrew{חוֹשֶׁךְ}  |  Choshech  |  Darkness
-		\item 	\largehebrew{מַכַּת בְּכוֹרוֹת}  |  Makkat b'chorot  |  Death of the Firstborn
-	%\end{itemize}	
-\end{center}
-\par}
+\newcommand{\PlaguesTextEng}{
+	\centering
+	\color{sectioncolour}
+	Blood\\
+	\vspace*{5ex}
+	Frogs\\ 
+	\vspace*{5ex}
+	Lice \\
+	\vspace*{5ex}
+	Beasts \\
+	\vspace*{5ex}
+	Cattle Disease \\
+	\vspace*{5ex}
+	Boils \\
+	\vspace*{5ex}
+	Hail \\
+	\vspace*{5ex}
+	Locusts \\
+	\vspace*{5ex}
+	Darkness \\
+	\vspace*{5ex}
+	Death of the Firstborn\\
+	\vspace*{5ex}
+}
+%
+\newcommand{\PlaguesTextCz}{\color{sectioncolour}
+	\raggedright
+	Krev\\ 
+	\vspace*{5ex}\\
+	Žáby\\ 
+	\vspace*{5ex}
+	Hmyz\\ 
+	\vspace*{5ex}
+	Zvěř\\ 
+	\vspace*{5ex}
+	Mor\\ 
+	\vspace*{5ex}
+	Vředy\\ 
+	\vspace*{5ex}
+	Krupobití\\ 
+	\vspace*{5ex}
+	Kobylky\\ 
+	\vspace*{5ex}
+	Tma\\ 
+	\vspace*{5ex}
+	Pobití Prvorozených\\ 
+	\vspace*{5ex} 
+	}
+\newcommand{\PlaguesTextHeb}{\color{sectioncolour}
+	\raggedleft
+	\largehebrew{דָּם} \\ 
+	\vspace*{1mm}
+	{\textit{Dam}}\\
+	\vspace*{2.3mm}
+	\largehebrew{צְפַרְדֵּעַ} \\ 
+	\vspace*{1mm}
+	{\textit{Tz'fardeiya}}\\
+	\vspace*{2.3mm}
+	\largehebrew{כִּנִּים} \\ 
+	\vspace*{1mm}
+	{\textit{Kinim}}\\
+	\vspace*{2.3mm}
+	\largehebrew{עַרוֹב}  \\ 
+	\vspace*{1mm}
+	{\textit{A'rov}}\\
+	\vspace*{2.3mm}
+	\largehebrew{דֶּבֶר} \\ 
+	\vspace*{1mm}
+	{\textit{Dever}}\\
+	\vspace*{2.3mm}
+	\largehebrew{שְׁחִין} \\ 
+	\vspace*{1mm}
+	{\textit{Sh'chin}}\\
+	\vspace*{2.3mm}
+	\largehebrew{בָּרָד}  \\ 
+	\vspace*{1mm}
+	{\textit{Barad}}\\
+	\vspace*{2.3mm}
+	\largehebrew{אַרְבֶּה}  \\ 
+	\vspace*{1mm}
+	{\textit{Ar'beh}}\\
+	\vspace*{2.3mm}
+	\largehebrew{חוֹשֶׁךְ}  \\ 
+	\vspace*{1mm}
+	{\textit{Choshech}}\\
+	\vspace*{2.3mm}
+	\largehebrew{מַכַּת בְּכוֹרוֹת} \\ 
+	\vspace*{1mm}
+	{\textit{Makkat b'chorot}}\\
+	\vspace*{2.3mm}	
+}
 
 \newcommand{\DayyeinuIntro}{
 	\vspace*{2ex}
