redoing the 4 questions
bashing it out rather than doing it neatly

--- a/blessings.tex
+++ b/blessings.tex
@@ -151,31 +151,31 @@ v’tzivanu al achilat maror.}
 \newcommand{\BareichEng}{
 \raggedright
 \textit{We will say the Birkat Hamazon (Grace after meals) with some extra parts:}
+\par
 Birkat Hazan: We praise God for sustaining life and providing food for all creatures.\\ %(sung)
-We praise God, Ruler of Everything, whose goodness sustains the world. You are
-the origin of love and compassion, the source of bread for all. Thanks to You, we
-need never lack for food; You provide food enough for everyone. We praise God,
-source of food for everyone.
+{\textcolor{darkblue} We praise God, Ruler of Everything, whose goodness sustains the world. You are the origin of love and compassion, the source of bread for all. Thanks to You, we need never lack for food; You provide food enough for everyone. We praise God, source of food for everyone.}
+\textcolor{black}
 \centered{\LARGE Amen}\\
-BirkatHaAretz: We thank God for being compassionate and nourishing us with food and Torah. %recount Exodus to Canaan. 
-As it says in the Torah: When you have eaten and are satisfied, give praise to your
-God who has given you this good earth. We praise God for the earth and for its
-sustenance, and for the words of Torah which are sweet like honey on the tongue and a lamp to light our feet (ps: 119)
+\par
+BirkatHaAretz: We thank God for being compassionate and nourishing us with food and Torah.\\ %recount Exodus to Canaan. 
+{\textcolor{darkblue} As it says in the Torah: When you have eaten and are satisfied, give praise to your God who has given you this good earth. We praise God for the earth and for its sustenance, and for the words of Torah which are sweet like honey on the tongue and a lamp to light our feet (ps: 119)} \textcolor{black}
 \centered{\LARGE Amen}\\
-\\Just as God sustained the Jewish people in the desert, so too God sustains us now and in the future. 
+{\textcolor{darkblue} Just as God sustained the Jewish people in the desert, so too God sustains us now and in the future. }
+\textcolor{black}
 \centered{\LARGE Amen}\\
 BirkatYerushalayim: We ask God for His mercy and continued support %, and traditionally to quickly rebuild Jerusalem.
 \centered{\LARGE Amen}\\
 \\BirkatHaTovVHameitiv: We remember the blessings God bestows upon us. %and request God never denies us anything good.\\
 \centered{\LARGE Amen}\\
 \\Harahaman \textit{(May the compassionate one)}\\
-We ask God, to uplift us and our community, and all the world.\\
-Renew our spiritual center in our time. We praise God, who centers us.
-May the source of peace grant peace to us, to the Jewish people, and to the entire
-world.
+We ask God to uplift us and our community, and all the world.\\
+{\textcolor{darkblue} Renew our spiritual center in our time. We praise God, who centers us. May the source of peace grant peace to us, to the Jewish people, and to the entire world.}\textcolor{black}
 \centered{\LARGE Amen}\\
-Bendigamos\\
+\vspace*{2ex}
+{\textcolor{darkblue}
+	Bendigamos\\
 Spanish and Portugese Jews sing a Ladino song entitled “Bendigamos,” or “We will bless,” (let's try to find it on spotify)}
+}
 %
 \newcommand{\MiriamBlessing}{
 include a blessing here for water and also for women}
