--- a/couching.tex
+++ b/couching.tex
@@ -81,29 +81,16 @@
 %
 \newcommand{\MaNishtana}{%
 \textit{\noindent\color{midblue}We take turns to read these questions}
-
-\MaNishtanaEng
-\MaNishtanaTlit
-\MaNishtanaCz
 \MaNishtanaHeb
-	\begin{enumerate}[label=\Roman*.]
-		\item First item, first list.
-		\begin{enumerate}[label=\arabic*., series=second]
-			\item First item, second list.
-			\item First item, third list.
-		\end{enumerate}
-		\item Second item, first list.
-		\begin{enumerate}[resume*=second]
-			\item Third item, second list.
-			\item Fourth item, second list.
-			\item Fifth item, second list.
-		\end{enumerate}
-		\item Third item, first list.
-		\begin{enumerate}[resume*=second]
-			\item Sixth item, second list.
-			\item Seventh item, second list.
-			\item Eighth item, second list.
-		\end{enumerate}
+\MaNishtanaTlit
+\MaNishtanaEng
+\MaNishtanaCz
+	\begin{enumerate}
+		\item \MaNishtanaHebi \\ \MaNishtanaTliti \\\MaNishtanaEngi \\ \MaNishtanaCzi \\
+		\item \MaNishtanaHebii \\ \MaNishtanaTlitii \\\MaNishtanaEngii \\ \MaNishtanaCzii \\
+		\item \MaNishtanaHebiii\\ \MaNishtanaTlitiii \\\MaNishtanaEngiii \\ \MaNishtanaCziii \\
+		\item \MaNishtanaHebiv \\ \MaNishtanaTlitiv \\\MaNishtanaEngiv \\ \MaNishtanaCziv \\
+		
 	\end{enumerate}
 
 \newcommand{\MaNishtanaAnswerCz}
