--- a/haggadah.tex
+++ b/haggadah.tex
@@ -162,7 +162,8 @@
 \Koreich
 
 \section{Shulchan Oreich : The Set Table : Šulchan Orech}
-\red[]{~time to read the whole shulchan aruch~ \par Let's Eat!}
+\red[]{~time to read the whole shulchan aruch~ \par Let's Eat!
+Během jídla, je možné  pít aniž by tím byl porušen příkaz čtyř pohárů.}
 
 \section{Tzafun : Afikomen! : Cafun}
 \red[]{The oldest participant must now embark upon the {\LARGE Afikomen hunt}}
