hebrew font size changes
changed Large then LARGE to LARGE then Huge

--- a/couching.tex
+++ b/couching.tex
@@ -80,18 +80,22 @@
 }
 %
 \newcommand{\MaNishtana}{%
-\textit{\noindent\color{midblue}We take turns to read these questions}
-\MaNishtanaHeb
-\MaNishtanaTlit
-\MaNishtanaEng
-\MaNishtanaCz
-	\begin{enumerate}
-		\item \MaNishtanaHebi \\ \MaNishtanaTliti \\\MaNishtanaEngi \\ \MaNishtanaCzi \\
-		\item \MaNishtanaHebii \\ \MaNishtanaTlitii \\\MaNishtanaEngii \\ \MaNishtanaCzii \\
-		\item \MaNishtanaHebiii\\ \MaNishtanaTlitiii \\\MaNishtanaEngiii \\ \MaNishtanaCziii \\
-		\item \MaNishtanaHebiv \\ \MaNishtanaTlitiv \\\MaNishtanaEngiv \\ \MaNishtanaCziv \\
-		
-	\end{enumerate}
+\begin{center}
+	\textit{\noindent\color{midblue}We take turns to read these questions}\par
+	\MaNishtanaHeb \\
+	\MaNishtanaTlit \\
+	\MaNishtanaEng \\
+	\MaNishtanaCz \par
+	1.\\
+	{\MaNishtanaHebi}\\
+	\\ \textcolor{black} {\textit{\MaNishtanaTliti}} \\\MaNishtanaEngi \\ \MaNishtanaCzi \\
+	3.
+	{\MaNishtanaHebii} \\ {\textit{\MaNishtanaTlitii}} \\\MaNishtanaEngii \\ \MaNishtanaCzii \\
+	4.
+	{\MaNishtanaHebiii}\\ {\textit{\MaNishtanaTlitiii}} \\\MaNishtanaEngiii \\ \MaNishtanaCziii \\
+	4.
+	{\MaNishtanaHebiv} \\ {\textit{\MaNishtanaTlitiv}} \\\MaNishtanaEngiv \\ \MaNishtanaCziv \\
+	\end{center}
 
 \newcommand{\MaNishtanaAnswerCz}
 \newcommand{\MaNishtanaAnswerEng}}
