--- a/haggadah.tex
+++ b/haggadah.tex
@@ -166,8 +166,7 @@
 Během jídla, je možné  pít aniž by tím byl porušen příkaz čtyř pohárů.}
 
 \section{Tzafun : Afikomen! : Cafun}
-\red[]{The oldest participant must now embark upon the {\LARGE Afikomen hunt}}
-\\
+\red[]{The oldest participant must now embark upon the {\LARGE Afikomen hunt}}\\
 \textit{music should be played here}
 
 \section{Bareich : Grace after the meal : Barech}
