--- a/readings.tex
+++ b/readings.tex
@@ -31,15 +31,14 @@
 \newcommand{\HaLachmaEng}{%
 	This is the bread of affliction our ancestors ate in the land of Egypt. Let all who are hungry come and eat; let all who are in need come and share our Passover. This year here, next year in the land of Israel; this year oppressed, next year free.}
 %
-\newcommand{\MaNishtanaHeb}{%
-	Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!
+\newcommand{\MaNishtanaHeb}{}
 \newcommand{\MaNishtanaHebi}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין חָמֵץ וּמַצָּה, הַלַּיְלָה הַזֶּה – כֻּלּוֹ מַצָּה?}}
 \newcommand{\MaNishtanaHebii}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין שְׁאָר יְרָקוֹת – הַלַּיְלָה הַזֶּה (כֻּלּוֹ) מָרוֹר?}}
 \newcommand{\MaNishtanaHebiii}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אֵין אָנוּ מַטְבִּילִין אֲפִילוּ פַּעַם אֶחָת – הַלַּיְלָה הַזֶּה שְׁתֵּי פְעָמִים?}}
 \newcommand{\MaNishtanaHebiv}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין בֵּין יוֹשְׁבִין וּבֵין מְסֻבִּין – הַלַּיְלָה הַזֶּה כֻּלָּנוּ מְסֻבִּין?}}
 %
 \newcommand{\MaNishtanaTlit}{%
-	Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!
+	Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!}
 \newcommand{\MaNishtanaTliti}{She-b’chol ha-leilot anu ochlin chameitz u-matzah, ha-lailah ha-zeh kulo matzah?}
 \newcommand{\MaNishtanaTlitii}{She-b’chol ha-leilot anu ochlin sh’ar y’rakot, ha-lailah ha-zeh maror?}
 \newcommand{\MaNishtanaTlitiii}{She-b’chol ha-leilot ein anu matbilin afilu pa’am achat, ha-lailah ha-zeh sh’teif’amim?}
